--- a/meta/9-6.md
+++ b/meta/9-6.md
@@ -20,7 +20,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Höhe der Drittmittel der TH Ingolstadt sowie der KU Eichstätt-Ingolstadt in Euro
 
 SOURCE_TYPE: Katholische Universität Eichstätt-Ingolstadt und Technische Hochschule Ingolstadt # data source  
 source_earliest_available_1: 2019
@@ -33,8 +33,9 @@ reporting_status: inprogress
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Dieser Indikator zeigt die Entwicklung der Höhe der Drittmittel der TH Ingolstadt sowie der KU Eichstätt-Ingolstadt in Euro an.<br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W2.2: Forschungsintensität<br>
+W2.2: Erhöhung der Forschungsintensität<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
 
