--- a/meta/10-1.md
+++ b/meta/10-1.md
@@ -18,7 +18,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Anteil der Schüler/-innen an Sonderpädagogischen Förderzentren in Prozent
+computation_definitions: Anteil der Schüler/-innen an Sonderpädagogischen Förderzentren in Prozent an der Gesamtzahl der Schüler/-innen in Ingolstadt
 
 SOURCE_TYPE: <a href="https://www.statistik.bayern.de/statistik/bildung_soziales/schulen/index.html">KSS-Monitoring (Kommunale Schulstatistik)</a>, Berechnung nach Schuljahren jeweils zum 01.10. d. jew. Schuljahrs"  # data source  
 source_earliest_available_1: 2019
@@ -31,9 +31,10 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Erfasste Förderschulen (SFZI, SFZII (beide städtisch) und JNVK (staatlich)); Ermittlung des Indikators umfasst auch die privaten Schulen; Berechnung jedoch ohne die Schüler/-innen an Technikerschule und Berufsfachschulen. Anteil an Gesamtschülerzahl Stadt Ingolstadt.<br>
+Bei diesem Indikator wurden die Sonderpädagogischen Förderzentren I und II (städtisch) berücksichtigt sowie die 
+Johann-Nepomuk-von-Kurz-Schule (staatlich). Die Ermittlung des Indikators umfasst auch die privaten Schulen. Allerdings ohne die Einberechnung der Schüler/-innen an der Technikerschule und den Berufsfachschulen.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-B2.3: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
+B2.3: Förderung der Bildungsteilhabe / Bildungsgerechtigkeit und lebenslangem Lernen<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
