--- a/meta/10-2.md
+++ b/meta/10-2.md
@@ -48,6 +48,6 @@ Ende 2022 wurde die Antidiskriminierungsstelle der Stadt Ingolstadt eingerichtet
 Über die Antidiskriminierungsstelle können Diskriminierungen online und vetraulich gemeldet werden. Sie unterstützt zudem und prüft gemeinsam mit den Betroffenen Lösungsmöglichkeiten. Mehr Informationen auf der Seite der <a href="https://www.ingolstadt.de/Leben/Diversit%C3%A4t/Antidiskriminierungsstelle/">Antidiskriminierungsstelle der Stadt Ingolstadt</a>.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-V1.1: Abbau von Ungleichheiten zwischen Stadtteilen und Bevölkerungsschichten<br>
+V1.1: Abbau von Ungleichheiten und Förderung von Teilhabe<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
