--- a/meta/10-4.md
+++ b/meta/10-4.md
@@ -54,6 +54,6 @@ reporting_status: complete
 Sozialversicherungspflichtig Beschäftigte in Ingolstadt nach höchstem erreichten Ausbildungsabschluss. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-B2.3: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
+B2.3: Förderung der Bildungsteilhabe / Bildungsgerechtigkeit und lebenslangem Lernen<br>
 <br>
 <b>BNK-Indikator</b>
