--- a/meta/10-7.md
+++ b/meta/10-7.md
@@ -18,7 +18,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: 
+computation_definitions: Wohnfläche (m² je Einwohner) in den 12 Stadtbezirken unter Berücksichtigung des Gini-Koeffizienten zur Darstellung von Ungleichheiten
 
 SOURCE_TYPE: Amt für Statistik und Stadtforschung  # data source  
 source_earliest_available_1: 2019
@@ -34,6 +34,6 @@ reporting_status: inprogress
 Der Gini-Koeffizient ist ein statistisches Standardmaß zur Messung der Ungleichheit einer Verteilung. Er kann Werte zwischen 0 und 1 annehmen. Je höher der Wert, desto stärker ausgeprägt ist die gemessene Ungleichheit. Beispielsweise ein Gini-Koeffizient von 0 hier bedeuten, dass alle verglichenen Personen genau die gleiche Wohnfläche zur Verfügung haben würden. Ein Wert von 1 dagegen bedeutet, dass eine Person die gesamte Fläche besitzt und alle anderen nichts. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-V1.1: Abbau von Ungleichheiten zwischen Stadtteilen und Bevölkerungsschichten<br>
+V1.1: Abbau von Ungleichheiten und Förderung von Teilhabe<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
