--- a/meta/10-8.md
+++ b/meta/10-8.md
@@ -50,6 +50,6 @@ Die unterschiedlichen Formen der Inklusion nach Schularten in Bayern können auf
 des <a href="https://www.km.bayern.de/unterrichten/unterrichtsalltag/inklusion/inklusion-an-den-verschiedenen-schularten">Bayerischen Staatsministeriums für Unterricht und Kultus</a> nachgelesen werden.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-B2.3: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
+B2.3: Förderung der Bildungsteilhabe / Bildungsgerechtigkeit und lebenslangem Lernen<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
