--- a/meta/10-11.md
+++ b/meta/10-11.md
@@ -34,6 +34,6 @@ reporting_status: complete
 Dieser Indikator zeigt den Anteil der Kinder mit deutscher und nicht-deutscher Familiensprache in KiTas an.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-B2.3: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
+B2.3: Förderung der Bildungsteilhabe / Bildungsgerechtigkeit und lebenslangem Lernen<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
