--- a/meta/3-3.md
+++ b/meta/3-3.md
@@ -24,7 +24,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt, Landkreis Eichstätt, Landkreis-Neuburg Schrobenhausen, Landkreis Pfaffenhofen a. d. Ilm     
 computation_definitions: Versorgung durch Allgemeinmediziner/-innen je 100.000 EW
 
-SOURCE_TYPE: <a href="https://www.lgl.bayern.de/gesundheit/gesundheitsberichterstattung/gesundheitsatlas/ia_report/atlas.html">Gesundheitsatlas Bayern</a> # data source  
+SOURCE_TYPE: <a href="https://www.lgl.bayern.de/gesundheit/gesundheitsberichterstattung/gesundheitsatlas/ia_report/atlas.html">Gesundheitsatlas Bayern</a> und Zahlen der Kassenärztlichen Vereinigung Bayerns # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: jährlich
 
@@ -35,7 +35,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Der Indikator gibt die ambulante Versorgung mit Hausärzt/-innen, die an der kassenärztlichen Versorgung teilnehmen, in Form der Versorgungsdichte auf regionaler Ebene wieder. Hausärzt/-innen gehören zu den wohnortnah benötigten Arztgruppen, daher sind regionale Unterschiede in der ambulanten Versorgungsinfrastruktur von besonderem Interesse.<br>
+Der Indikator gibt die ambulante Versorgung mit Hausärzt/-innen, die an der kassenärztlichen Versorgung teilnehmen, in Form der Versorgungsdichte auf regionaler Ebene wieder. Hausärzt/-innen gehören zu den wohnortnah benötigten Arztgruppen, daher sind regionale Unterschiede in der ambulanten Versorgungsinfrastruktur von besonderem Interesse. Die Zahl ist sinkend aufgrund nahezu gleichbleibender Anzahl der Ärzte bei steigender Bevölkerungszahl.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 N2.4: Sicherstellung einer ausreichenden medizinischen Infrastruktur<br>
