--- a/meta/11-10.md
+++ b/meta/11-10.md
@@ -42,6 +42,6 @@ Weitere Informationen zur Anzahl der von Umgebungslärm ausgesetzten Personen in
 Auf Grundlage dieser Berechnungen werden in den folgenden Jahren Maßnahmen zur Reduzierung der lärmbelasteten Fläche und Personen umgesetzt. Weitere Informationen hierzu finden Sie ebenfalls auf der Seite der Stadt Ingolstadt<br> 
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N3.2: Umsetzung einer nachhaltigen und generationsgerechten Stadtplanung, Gemeinflächen-bedarf sicherstellen, Wohnflächen pro Kopf reduzieren<br>
+N3.2: Umsetzung einer nachhaltigen und generationsgerechten Stadtplanung sowie Sicherstellung von Gemeinbedarfsflächen<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
