--- a/meta/11-18.md
+++ b/meta/11-18.md
@@ -35,6 +35,6 @@ reporting_status: inprogress
 Der Indikator zeigt die Anzahl an kommunalen oder durch die Kommune unterstützte Treffpunkte für Senior/-innen, Jugendliche, Personen mit Einschränkungen jeglicher Art.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N3.2: Umsetzung einer nachhaltigen und generationsgerechten Stadtplanung, Gemeinflächenbedarf sicherstellen, Wohnflächen pro Kopf reduzieren<br>
+N3.2: Umsetzung einer nachhaltigen und generationsgerechten Stadtplanung sowie Sicherstellung von Gemeinbedarfsflächen<br>
 <br>
 <b>BNK-Indikator</b>
