--- a/meta/11-19.md
+++ b/meta/11-19.md
@@ -22,7 +22,7 @@ computation_definitions: Anzahl der Kleingartenanlagen  und der dazugehörigen P
 
 SOURCE_TYPE: Gartenamt der Stadt Ingolstadt  # data source  
 source_earliest_available_1: 2022
-source_periodicity_1: Jährlich
+source_periodicity_1: unregelmäßig
 
 language: de   
 published: true 
