--- a/meta/15-1.md
+++ b/meta/15-1.md
@@ -31,7 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anteil der ökologisch bewirtschafteten Fläche an der landwirtschaftlich genutzten Fläche in Ingolstad. Hier sind die Flächenangaben aller Betriebe in Ingolstadt mit ihren gesamten bewirtschafteten Flächen berücksichtigt.<br>
+Anteil der ökologisch bewirtschafteten Fläche an der landwirtschaftlich genutzten Fläche in Ingolstadt. Hier sind die Flächenangaben aller Betriebe in Ingolstadt mit ihren gesamten bewirtschafteten Flächen berücksichtigt.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K2.1: Unterstützung einer nachhaltigen, regionalen Landwirtschaft und Erhalt landwirtschaftlicher Flächen<br>
