--- a/meta/15-4.md
+++ b/meta/15-4.md
@@ -34,6 +34,6 @@ reporting_status: complete
 Angelegte Ausgleichsflächen durch das städtische Forstamt als Waldflächen sowie des städtischen Gartenamts.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K4.3: Ressourcenschonender Umgang mit Flächen und Baustoffen – Förderung der Wiederverwendbarkeit und Wiederverwendung von Baustoffen<br>
+K4.3: Ressourcenschonender Umgang mit Fläche und Baustoffen<br>
 <br>
 <b>Ingolstadtspezifischer Indikator</b>
