--- a/meta/16-3.md
+++ b/meta/16-3.md
@@ -35,7 +35,7 @@ Der Finanzierungssaldo eines Kommunalhaushalts ist die Differenz aus den bereini
 
 Der Finanzierungssaldo betrachtet nur die Einnahmen und Ausgaben (nicht etwa Erträge und Aufwendungen) und ist demnach eine rein kameralistische Größe. Er wird u.a. für den jährlichen Gemeindefinanzbericht ermittelt. Ein positiver Finanzierungssaldo besagt, dass die Geldzuflüsse im betrachteten Zeitraum größer waren als die Geldabflüsse; er bedeutet nicht notwendig, dass der Haushalt ausgeglichen ist.<br>
 <br>
-<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 I3.1: Sicherstellung eines zukunftsfähigen Haushalts <br>
 <br>
 <b>BNK-Indikator</b>
