--- a/meta/16-4.md
+++ b/meta/16-4.md
@@ -34,5 +34,6 @@ reporting_status: complete
 Liquiditätskredite sind Kredite, die die Kommune nur kurzfristig zur Sicherstellung der Liquidität (Zahlungsfähigkeit) aufnimmt, um Aufgaben zeitgerecht leisten zu können. In den vergangenen Jahren war die Aufnahme von Liquiditätskrediten aufgrund einer stabilen Haushaltslage in Ingolstadt nicht erforderlich. Daher ist der Wert in diesem Fall über die letzten Jahre auf null gesetzt.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+I3.1: Förderung eines generationengerechten Haushalts <br>
 <br>
 <b>BNK-Indikator</b>
