--- a/meta/5-3.md
+++ b/meta/5-3.md
@@ -38,7 +38,7 @@ Personalwechsel wird weiterhin nur ein Referat von einer Frau geführt. Die Wahl
 <br>
 Für die Verwaltung werden alle Personen erfasst, die in einer Führungsposition tätig sind. Unter Führungspositionen verstehen sich Amtsleiter/-innen, Stellvertreter/-innen 
 und Sachgebietsleiter/-innen. Die Entwicklung zeigt einen Anstieg der Frauenquote in den letzten Jahren. Auf Referatsebene sind Männer deutlich in der Überzahl. Zwischen 2017 und 
-2022 gibt es aber eine signifikante Steigerung von fast 15 Prozent an Leiterinnen der Ämter und Dienststellen.
+2022 gibt es aber eine signifikante Steigerung von fast 15 Prozent an Leiterinnen der Ämter und Dienststellen.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 V1.1.2: Förderung der geschlechterunabhängigen Chancengleichheit<br>
