--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -41,7 +41,7 @@
 
 5-1-title: Angebote für Vereinbarkeit von Beruf und Familie für städtische Mitarbeitende
 5-2-title: Verdienstabstand zwischen Frauen und Männern
-5-3-title: Frauenanteil im Stadtrat
+5-3-title: Frauenanteil im Stadtrat und in der Verwaltung
 
 6-1-title: Anzahl sanitärer Einrichtungen im öffentlichen Raum 
 6-2-title: Anzahl Trinkwasserbrunnen
