--- a/meta/5-3.md
+++ b/meta/5-3.md
@@ -18,7 +18,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Prozentualer Frauenanteil im Stadtrat der Stadt Ingolstadt und in Führungsposition der Ingolstädter Stadtverwaltung
+computation_definitions: Prozentualer Frauenanteil im Stadtrat der Stadt Ingolstadt und in Führungspositionen der Ingolstädter Stadtverwaltung
 
 SOURCE_TYPE: Amt für Statistik und Stadtforschung der Stadt Ingolstadt, <a href="https://www.ingolstadt.de/output/download.php?fid=3052.1401.1.PDF">Tätigkeitsbericht und Gleichstellungskonzept 2023</a> der Gleichstellungsstelle der Stadt Ingolstadt # data source  
 source_earliest_available_1: 2017
