--- a/meta/11-2.md
+++ b/meta/11-2.md
@@ -30,7 +30,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: Barrierefreies und inklusives Mobilitätsangebot (Anzahl barrierefreier Bushaltestellen, Ampeln mit Sensor, Blindenleitsysteme im öffentlichen Raum, barrierefreie Busse, Eltern-Kind-Parkplätze, barrierefreie Parkplätze)
 
-SOURCE_TYPE: IFG Aör, VGI, Tiefbauamt der Stadt Ingolstadt, Amt für Verkehrstechnik und Geoinformation der Stadt Ingolstadt, Inklusionsbeauftragte der Stadt Ingolstadt  # data source  
+SOURCE_TYPE: IFG AöR, VGI, Tiefbauamt der Stadt Ingolstadt, Amt für Verkehrstechnik und Geoinformation der Stadt Ingolstadt, Inklusionsbeauftragte der Stadt Ingolstadt  # data source  
 source_earliest_available_1:  2019
 source_periodicity_1: unregelmäßig
 
@@ -50,6 +50,8 @@ In einigen, wenigen Parkeinrichtungen gab es früher Eltern-Kind-Stellplätze. D
 Aktuell existieren keine barrierefreien E-Ladestationen auf den Parkgeländen der IFG. Diese sind zwar breiter gebaut als normale Parkplätze, entsprechen aber nicht den Kriterien barrierefreier Stellplätze und fallen daher hier in der Statistik nicht darunter.<br> 
 <br>
 <b>Gesamt barrierefreie Parkplätze:</b> Diese Ausführung bezieht sich auf eine Zusammenstellung der Inklusionsbeauftragten der Stadt Ingolstadt. Hierbei sind auch nicht städtische Parkplätze enthalten. Die barrierefreien Parkplätze beim Audi Sportpark wurden hier dazugezählt (25 Parkplätze).<br>
+<br>
+<b>Blindenleitsysteme:</b> Die Daten sind  nicht auf einen Standort bezogen, sondern stellen immer die einzelnen Elemente bei Übergängen dar. Die Daten stammen aus der Straßenbefahrung 2022.<br> 
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N4.3: Barrierefreie Mobilität für alle Menschen<br>
