--- a/meta/13-1.md
+++ b/meta/13-1.md
@@ -31,7 +31,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-In Städten wirkt sich besonders die durch den Klimawandel bedingte zunehmende Hitzebelastung negativ auf die menschliche Gesundheit aus. Nach den Prognosen des bayerischen Landesamts für Umweltschutz wird die Zahl der gesundheitsbelastenden Hitzetage (Tmax > 30° C) und Tropennächte (Tmin > 20°C) deutlich zunehmen. Um in der Stadtentwicklung darauf angemessen reagieren und Vorsorgemaßnahmen treffen zu können, sind umfangreiche und hochaufgelöste Grundlageninformationen unverzichtbar. Geeignete Instrumente zur Identifizierung der relevanten „Klimatope“ (Flächen mit einheitlichen klimatischen Gegebenheiten) und deren planerischen Bearbeitung ist die <a href="https://stadtplan.ingolstadt.de/#ll=48.762982,11.390595&z=13&m=custom379&mf=s100!o100&cat=39338,39357">Klimaanalysekarte</a>. Aus dieser geht hervor, dass insbesondere in der Ingolstadtädter Altstadt eine starke Belastung durch Hitze existiert. Die gestiegene Zahl der betroffenen Bürger/-innen resultiert aus der steigenden Einwohnerzahl in der Altstadt. Weitere betroffene Flächen sind vor allem die Gewerbegebiete der Stadt, sodass vor allem die dortigen Arbeiter/-innen davon betroffen sind. Dies wird hier aber nicht weiter aufgeführt. <br>
+In Städten wirkt sich besonders die durch den Klimawandel bedingte zunehmende Hitzebelastung negativ auf die menschliche Gesundheit aus. Nach den Prognosen des bayerischen Landesamts für Umweltschutz wird die Zahl der gesundheitsbelastenden Hitzetage (Tmax > 30° C) und Tropennächte (Tmin > 20°C) deutlich zunehmen. Um in der Stadtentwicklung darauf angemessen reagieren und Vorsorgemaßnahmen treffen zu können, sind umfangreiche und hochaufgelöste Grundlageninformationen unverzichtbar. Geeignete Instrumente zur Identifizierung der relevanten „Klimatope“ (Flächen mit einheitlichen klimatischen Gegebenheiten) und deren planerischen Bearbeitung ist die <a href="https://stadtplan.ingolstadt.de/#ll=48.762982,11.390595&z=13&m=custom379&mf=s100!o100&cat=39338,39357">Klimaanalysekarte</a>. Aus dieser geht hervor, dass insbesondere in der Ingolstadtädter Altstadt eine starke Belastung durch Hitze existiert. Die gestiegene Zahl der betroffenen Bürger/-innen resultiert aus der steigenden Einwohnerzahl in der Altstadt. Weitere betroffene Flächen sind vor allem die Gewerbegebiete der Stadt, sodass vor allem die dortigen Arbeiter/-innen davon betroffen sind. Dies wird hier aber nicht weiter aufgeführt.<br>
+<br>
+Die Klimaanalyse-Karte gibt darüber hinaus in ihrer Vulnerabilitätsanalyse Auskunft über Bevölkerungsgruppen, die besonders stark von Klimatopen mit "Moderater Überwärmung" und "Starker Überwärmung" betroffen sind. Diese sind besonders häufig im Altstadtgebiet, aber auch im Umland wohnhaft, das v.a. durch eine ältere Bevölkerungsstruktur geprägt ist. Die Analysen sind in der <a href="https://www.ingolstadt.de/index.php?object=tx,2789.3.1&ModID=6&FID=3052.8703.1">Klimaanalyse</a> nachzulesen.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K3.2: Entgegenwirken von Hitzeinseln (Vermeiden durch Ausbau der grünen Infrastruktur, Berücksichtigung von Kaltluftschneisen zur Belüftung der Siedlungsbereiche)<br>
