--- a/meta/1-8.md
+++ b/meta/1-8.md
@@ -28,7 +28,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: Arbeitslosenquote bezogen auf alle zivilen Erwerbspersonen
 
-SOURCE_TYPE: <a href="https://statistik.arbeitsagentur.de/SiteGlobals/Forms/Suche/Einzelheftsuche_Formular.html?topic_f=gemeinde-arbeitslose-quoten&r_f=bl_Bayern">Bundesagentur für Arbeit</a>  # data source  
+SOURCE_TYPE: <a href="https://statistik.arbeitsagentur.de/SiteGlobals/Forms/Suche/Einzelheftsuche_Formular.html?topic_f=gemeinde-arbeitslose-quoten&r_f=by_Ingolstadt">Bundesagentur für Arbeit</a>  # data source  
 source_earliest_available_1: 2008 (Darstellung im Dashboard ab 2019)
 source_periodicity_1: Jährlich
 
