--- a/meta/1-8.md
+++ b/meta/1-8.md
@@ -25,7 +25,7 @@ data_start_values:  # initialize the field to be shown
    value: Landkreis Pfaffenhofen a. d. Ilm
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Ingolstadt 
+national_geographical_coverage: Deutschland, Bayern, Ingolstadt, Landkreis Eichstätt, Landkreis Neuburg-Schrobenhausen, Landkreis Pfaffenhofen a. d. Ilm   
 computation_definitions: Arbeitslosenquote bezogen auf alle zivilen Erwerbspersonen
 
 SOURCE_TYPE: <a href="https://statistik.arbeitsagentur.de/SiteGlobals/Forms/Suche/Einzelheftsuche_Formular.html?topic_f=gemeinde-arbeitslose-quoten&r_f=by_Ingolstadt"> Bundesagentur für Arbeit</a>  # data source  
@@ -39,7 +39,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Der Indikator beschreibt die Arbeitslosenquote bezogen auf alle zivilen Erwerbspersonen in Ingolstadt im Vergleich zu den Landkreisen der Region 10, dem Land Bayern und Deutschland. Insbesondere im Corona-Jahr 2020 ist ein starker Anstieg der Arbeitslosquote zu verzeichnen. Dieser Wert sank in den darauffolgenden Jahren wieder. Die Werte sind Jahresdurchschnittswerte. Monatliche Schwankungen sind in den einzelnen Statistiken der Bundesagentur für Arbeit nachzulesen.<br>
+Der Indikator beschreibt die Arbeitslosenquote bezogen auf alle zivilen Erwerbspersonen in Ingolstadt im Vergleich zu den Landkreisen der Region 10, dem Land Bayern und Deutschland. Insbesondere im Corona-Jahr 2020 ist ein starker Anstieg der Arbeitslosquote zu verzeichnen. Dieser Wert sank in den darauffolgenden Jahren wieder. Die Werte sind Jahresdurchschnittswerte.<br> 
+<br>
+Monatliche Schwankungen sind in den einzelnen Statistiken der Bundesagentur für Arbeit nachzulesen.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br> 
 V1.4: Armutsbekämpfung<br>
