--- a/meta/8-2.md
+++ b/meta/8-2.md
@@ -36,7 +36,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Dieser Indikator zeigt die sv-Beschäftigtenquote der in Ingolstadt Beschäftigte an unterteilt nach Geschlecht und Deutsch / Nicht-Deutsch. Die Quoten sind Wohnortsstatistiken. In den letzten Jahren haben sich insbesondere die Beschäftigungsquoten der Deutsch / Nicht-Deutsch kategorisierten Perosnengruppen weitestgehend angeglichen.<br>
+Dieser Indikator zeigt die sv-Beschäftigtenquote der in Ingolstadt Beschäftigte an unterteilt nach Geschlecht und Deutsch / Nicht-Deutsch. Die Quoten sind Wohnortsstatistiken. In den letzten Jahren haben sich insbesondere die Beschäftigungsquoten der Deutsch / Nicht-Deutsch kategorisierten Personengruppen weitestgehend angeglichen.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N3.7: Sicherung einer qualitativ hochwertigen Beschäftigung<br>
