--- a/meta/9-6.md
+++ b/meta/9-6.md
@@ -28,12 +28,13 @@ source_periodicity_1: jährlich
 
 language: de   
 published: true 
-reporting_status: inprogress
+reporting_status: complete
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Dieser Indikator zeigt die Entwicklung der Höhe der Drittmittel der TH Ingolstadt sowie der KU Eichstätt-Ingolstadt in Euro an.<br>
+<br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 W2.2: Erhöhung der Forschungsintensität<br>
 <br>
