--- a/meta/3-2.md
+++ b/meta/3-2.md
@@ -41,6 +41,8 @@ Prävention ist im Gesundheitswesen ein Oberbegriff für zielgerichtete Maßnahm
 <br>
 Quelle: <a href="https://www.praevention.at/sucht-und-suchtvorbeugung/begriffs-und-problemdefinitionen/der-begriff-praevention">Institut Suchtprävention</a> und <a href="https://www.bundesgesundheitsministerium.de/service/begriffe-von-a-z/p/praevention.html">Bundesgesundheitsministerium</a><br>
 <br>
+Für 2019 und 2020 liegen aufgrund einer Überarbeitung des Statistiksystems nur die Präventionen insgesamt vor. Eine Unterteilung ist im Nachgang nicht mehr möglich.<br>
+<br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 N2.1: Reduzierung der gesundheitlichen physischen und psychischen Belastung und Sicherstellung von ausreichenden Präventionsangeboten<br>
 <br>
