--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -60,6 +60,7 @@
 8-5-title: Anzahl teilnehmender Betriebe am Wohnortcluster
 8-6-title: sv-Beschäftigte
 8-7-title: Auszubildende am Standort
+8-8-title: Wanderungssaldo
 
 9-1-title: Gründungssaldo
 9-2-title: Breitbandversorgung
