--- a/meta/10-4.md
+++ b/meta/10-4.md
@@ -53,7 +53,7 @@ reporting_status: complete
 ---
 Sozialversicherungspflichtig Beschäftigte in Ingolstadt nach höchstem erreichten Ausbildungsabschluss.<br>
 <br>
-<b>Hinweis:</b> Bei diesen Daten handelt es sich um Daten aus dem Bayerischen Landesamt für Statistik. Die Bundesagentur für Arbeit hat im Dezember 2023 die Arbeitsortdaten für den Zeitraum ab Januar 2018 und die
+<b>Hinweis:</b> Bei diesen Daten handelt es sich um Daten des Bayerischen Landesamt für Statistik. Die Bundesagentur für Arbeit hat im Dezember 2023 die Arbeitsortdaten für den Zeitraum ab Januar 2018 und die
 Wohnortdaten ab Januar 2013 revidiert. Die Revision wurde hier noch nicht vollzogen. Daher kommt es zu geringfügigen Abweichungen zu Ergebnissen in Veröffentlichungen der Bundesagentur für Arbeit.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
