--- a/meta/8-1.md
+++ b/meta/8-1.md
@@ -18,7 +18,7 @@ data_start_values:  # initialize the field to be shown
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Anteil der aufstockenden ALG II Leistungen insgesamt
+computation_definitions: Anteil der erwerbstätigen Leistungsbezieher/-innen mit ergänzenden Leistungen aus dem ALG II
 
 SOURCE_TYPE: "Jobcenter Ingolstadt"   # data source  
 source_earliest_available_1: 2019 
@@ -31,7 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anteil der erwerbstätigen Anteil der aufstockenden ALG II Leistungen insgesamt an allen erwerbsfähigen Leistungsbezieher/-innen. <br>
+Anteil der erwerbstätigen Leistungsbezieher/-innen mit ergänzenden Leistungen aus dem ALG II. <br>
 <br>
 <b>Hinweis:</b> Zum 1. Januar 2023 hat das Bürgergeld das Arbeitslosengeld II abgelöst. Mit dem Bürgergeld hat die Bundesregierung eine Sozialreform auf den Weg gebracht. Die staatliche Hilfe ist nun bürgernäher, unbürokratischer und zielgerichteter. Menschen in der Grundsicherung werden besser qualifiziert und damit in dauerhafte Jobs vermittelt. Außerdem wurde die Berechnung der Regelbedarfe auf eine neue Grundlage gestellt.<br>
 <br>
