--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -53,7 +53,7 @@
 7-2-title: Zubau Photovoltaikanlagen in Kilowatt Peak
 7-3-title: Ladesäuleninfrastruktur
 
-8-1-title: Erwerbstätige Aufstocker
+8-1-title: Leistungsbezieher/-innen mit Einkommen aus Erwerbstätigkeit
 8-2-title: Beschäftigungsquote (15- bis 64-Jährige)
 8-3-title: Bruttoinlandsprodukt
 8-4-title: Langzeitarbeitslose im Verhältnis zu Langzeitleistungsbeziehern
