--- a/meta/4-11.md
+++ b/meta/4-11.md
@@ -34,7 +34,7 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Der Indikator gibt an, wie viele Zugangspunkte zu öffentlichen Wlan-Netzen und PCs in den Kultur- und Bildungseinrichtungen der Stadt Ingolstadt existieren (ohne Schulen).
-Die Stadtbücherei Ingolstadt bietet eine kostenlose PC-Nutzung mit Druckmöglichkeit im Herzogskasten und der Stadtteilbücherei Südwest an. 
+Die Stadtbücherei Ingolstadt bietet eine kostenlose PC-Nutzung mit Druckmöglichkeit im Herzogskasten und der Stadtteilbücherei Südwest an. Alle Räume der Stadtbücherei sind zudem mit WLAN ausgestattet. 
 Die 6 PCs im Herzogskasten werden gut genutzt von Menschen ohne Ausdruckmöglichkeit, von Personen, die kein Smartphone haben, aber am digitalen Leben teilnehmen möchten.<br>
 <br>
 In den Bürgerhäusern Alte Post und Neuburger Kasten steht für Besucher/-innen das Bayern W-LAN zur Verfügung.<br>
