--- a/meta/17-3.md
+++ b/meta/17-3.md
@@ -41,13 +41,13 @@ Im Rahmen des breitgefächerten Netzwerkes mit allen Akteuren der Integrationsar
 <br>
 Die Volkshochschule Ingolstadt (VHS) kooperiert seit mehreren Jahren mit migrantischen Organisationen im Rahmen mehrerer Projekte im Jahr. Darüber hinaus sind eine Vielzahl von Kursleiterinnen und Kursleitern in der Volkshochschule tätig, die einen Migrationshintergrund bzw. ausländische Wurzeln vorweisen können. Eine genaue Auflistung der Projekte ist im Nachgang nicht zu ermitteln, daher sind hier nur die Kooperationen der VHS mit migrantischen Organisationen abgebildet. Das umfassende Programm für alle Bürgerinnen und Bürger wird durch die Vielfalt der Dozierenden erst ermöglicht.<br>
 <br>
-Darüber arbeitet die Stadtbücherei Ingolstadt ebenfalls mit vielen migrantischen Organisationen zusammen. Aufgrund der Corona-Pandemie von 2020 / 2021 ist in diesen beiden Jahren ein deutlicher Einbruch zu verzeichnen. Seit 2022 steigt die Zahl der Projekte wieder.<br>
+Darüber hinaus arbeitet die Stadtbücherei Ingolstadt ebenfalls mit vielen migrantischen Organisationen zusammen. Aufgrund der Corona-Pandemie von 2020 / 2021 ist in diesen beiden Jahren ein deutlicher Einbruch zu verzeichnen. Seit 2022 steigt die Zahl der Projekte wieder.<br>
 <br>
 Das Kulturamt der Stadt Ingolstadt arbeitet im Rahmen des Fest der Kulturen mit den in Ingolstadt gemeldeten ausländischen Kulturvereinen zusammen, die von Personen mit migrantischem Hintergrund betrieben, betreut und getragen werden.<br>
 <br>
 Gleiches gilt für das Afrikafest – hier ist der Partner der Afrikaverein, sowie Gastronomen, die afrikanisches Essen anbieten.<br>
 <br>
-Die Urbankultur engagiert für Ihre Veranstaltungen teilweise auch Menschen mit Migrationshintergrund, aber nicht alle befassen sich mit dem Thema Migration bzw. die Veranstaltungen haben dies nicht zum Ziel. Daher werden diese Projekte hier nicht aufgeführt.<br>
+Die Urbankultur engagiert für ihre Veranstaltungen teilweise auch Menschen mit Migrationshintergrund, aber nicht alle befassen sich mit dem Thema Migration bzw. die Veranstaltungen haben dies nicht zum Ziel. Daher werden diese Projekte hier nicht aufgeführt.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 V2.2: Interkommunale/r, überregionale/r und internationale/r Austausch und Zusammenarbeit<br>
