--- a/meta/5-2.md
+++ b/meta/5-2.md
@@ -35,6 +35,8 @@ Der Verdienstabstand zwischen Frauen und Männern in Euro, gemessen am Medianein
 <br>
 Im Vergleich zum Jahr 2021 ist der Verdienstabstand gemessen am Medianeinkommen zwischen Frauen und Männern (sog. Gender Pay Gap) deutlich gestiegen. Als wesentlicher Faktor für die unterschiedlichen Verdienstmöglichkeiten scheint sich die regionale Wirtschaftsstruktur zu erweisen. Vor allem die stark spezialisierte Struktur, die in Ingolstadt u.a. von der Kraftfahrzeugbranche geprägt ist, zeichnet sich durch einen hohen Beschäftigungsanteil der Männer aus. Hinzu kommt eines der höchsten Durchschnittsgehälter pro Kopf in Ingolstadt, die im Besonderen auch durch die Industrie geprägt ist. Frauen übernehmen in Ingolstadt im Verhältnis öfter schlechter bezahlte Berufe, wie soziale Berufe und bekleiden auch seltener Führungspositionen oder übernehmen die unbezahlte Arbeit zu Hause, kümmern sich um die Kinder oder zu pflegende Angehörige. Dies führt nicht nur zu geringerem Einkommen und einem „Karriereknick“ ab der Geburt des ersten Kindes, sondern in der Folge daraus auch zu geringerer Rente und oftmals drohender Altersarmut.<br>
 <br>
+Mehr Informationen zum Gender Pay Gap finden Sie auf der Seite des <a href="https://www.statistik.bayern.de/presse/mitteilungen/2024/pm061/index.html#:~:text=Betrachtet%20man%20den%20Verdienstabstand%20zwischen,im%20Vorjahr%20%E2%80%93%20bei%20sieben%20Prozent.">Bayerischen Landesamt für Statistik</a> und des <a href="https://www.destatis.de/DE/Themen/Arbeit/Verdienste/Verdienste-GenderPayGap/_inhalt.html#1127846">Statistischen Bundesamts</a>.<br>   
+<br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 V1.1.2: Förderung der geschlechterunabhängigen Chancengleichheit <br>
 <br>
