--- a/translations/de/my-custom-translations.yml
+++ b/translations/de/my-custom-translations.yml
@@ -9,10 +9,10 @@
 frontpage-intro-title: Zukunft gemeinsam gestalten - Monitoring der Nachhaltigkeitsstrategie Ingolstadt
 frontpage-intro-description: |
   <b>Unsere Vision für Ingolsadt</b><br>
-  "Im Jahr 2045 ist Ingolstadt eine nachhaltige, klimaangepasste Stadt, die durch emissionsarme Energieversorgung und Kreislaufwirtschaft 
+  <i>"Im Jahr 2045 ist Ingolstadt eine nachhaltige, klimaangepasste Stadt, die durch emissionsarme Energieversorgung und Kreislaufwirtschaft 
   sowohl die Lebensgrundlagen schützt als auch das Gemeinwohl stärkt. Die Bürgerinnen und Bürger genießen vielfältige Mobilitätsangebote 
   und eine hohe Lebensqualität in urbanen und grünen, familien- und kinderfreundlichen Stadtvierteln. Bildungs- und Kultureinrichtungen 
-  stehen allen offen und fördern Teilhabe. Respekt für Verschiedenheit prägt das gesellschaftliche Leben. Ein wirtschaftlich starkes Ingolstadt zeigt Weltoffenheit und globale Verantwortung."<br>
+  stehen allen offen und fördern Teilhabe. Respekt für Verschiedenheit prägt das gesellschaftliche Leben. Ein wirtschaftlich starkes Ingolstadt zeigt Weltoffenheit und globale Verantwortung."</i><br>
   <br>
   Basierend auf dem Leitbild der 17 globalen Ziele für nachhaltige Entwicklung (Sustainable Development Goals, SDGs) 
   hat die Stadt Ingolstadt in einem Gemeinschaftsprojekt mit der Stadtgesellschaft eine Nachhaltigkeitsstrategie entwickelt.
