--- a/translations/de/my-custom-translations.yml
+++ b/translations/de/my-custom-translations.yml
@@ -8,7 +8,7 @@
 
 frontpage-intro-title: Zukunft gemeinsam gestalten - Monitoring der Nachhaltigkeitsstrategie Ingolstadt
 frontpage-intro-description: |
-  <b>Unsere Vision für Ingolsadt</b><br>
+  <br><b>Unsere Vision</b><br>
   <i>"Im Jahr 2045 ist Ingolstadt eine nachhaltige, klimaangepasste Stadt, die durch emissionsarme Energieversorgung und Kreislaufwirtschaft 
   sowohl die Lebensgrundlagen schützt als auch das Gemeinwohl stärkt. Die Bürgerinnen und Bürger genießen vielfältige Mobilitätsangebote 
   und eine hohe Lebensqualität in urbanen und grünen, familien- und kinderfreundlichen Stadtvierteln. Bildungs- und Kultureinrichtungen 
