--- a/meta/11-2.md
+++ b/meta/11-2.md
@@ -22,13 +22,13 @@ data_start_values:  # initialize the field to be shown
  - field: Barrierefreie und inklusive Mobilitätsangebot
    value: Blindenleitsysteme
  - field: Barrierefreie und inklusive Mobilitätsangebot
-   value: Bushaltestellen 
+   value: Bushaltestellen DFI inkl. akustische Ansagen 
  - field: Barrierefreie und inklusive Mobilitätsangebot
-   value: Busse
+   value: Bushaltestellen taktile Ausstattung
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
-computation_definitions: Barrierefreies und inklusives Mobilitätsangebot (Anzahl barrierefreier Bushaltestellen, Ampeln mit Sensor, Blindenleitsysteme im öffentlichen Raum, barrierefreie Busse, Eltern-Kind-Parkplätze, barrierefreie Parkplätze)
+computation_definitions: Barrierefreies und inklusives Mobilitätsangebot (Anzahl barrierefreier Bushaltestellen, Ampeln mit Sensor, Blindenleitsysteme im öffentlichen Raum, Eltern-Kind-Parkplätze, barrierefreie Parkplätze)
 
 SOURCE_TYPE: IFG AöR, VGI, Tiefbauamt der Stadt Ingolstadt, Amt für Verkehrstechnik und Geoinformation der Stadt Ingolstadt, Inklusionsbeauftragte der Stadt Ingolstadt  # data source  
 source_earliest_available_1:  2019
@@ -36,22 +36,27 @@ source_periodicity_1: unregelmäßig
 
 language: de   
 published: true 
-reporting_status: inprogress
+reporting_status: complete
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Der Indikator weist die Anzahl des barrierefreien und inklusiven Mobilitätsangebote aus (Anteil barrierefreier Bushaltestellen, Ampeln mit Sensor, Blindenleitsysteme im öffentlichen Raum, barrierefreie Busse, Eltern-Kind- und Behindertenparkplätze).<br>
 <br>
-<b>Städtische barrierefreie Parkplätze:</b> Die Aussage bezieht sich auf Anlagen und Stellplätze in städtischer Hand bzw. in Hand der Beteiligungsunternehmen der Stadt Ingolstadt.<br>
+<b>Städtische barrierefreie Parkplätze:</b> Die Aussage bezieht sich auf Anlagen und Stellplätze in städtischer Hand bzw. in Hand der Beteiligungsunternehmen der Stadt Ingolstadt. Insgesamt befinden sich 8.099 Stellplätze in öffentlicher Hand und 575 befinden sich aktuell im Bau.<br>
 <br>
-In einigen, wenigen Parkeinrichtungen gab es früher Eltern-Kind-Stellplätze. Da es aber regelmäßig Diskussionen mit „Falschnutzern“ gab und eine rechtliche Durchsetzung nicht ist, wurden diese, in den Sanierungen, nicht mehr ausgewiesen.<br>
+In einigen, wenigen Parkeinrichtungen gab es früher <i>Eltern-Kind-Stellplätze</i>. Da es aber regelmäßig Diskussionen mit „Falschnutzern“ gab und eine rechtliche Durchsetzung nicht ist, wurden diese, in den Sanierungen, nicht mehr ausgewiesen.<br>
 <br>
 Aktuell existieren keine barrierefreien E-Ladestationen auf den Parkgeländen der IFG. Diese sind zwar breiter gebaut als normale Parkplätze, entsprechen aber nicht den Kriterien barrierefreier Stellplätze und fallen daher hier in der Statistik nicht darunter.<br> 
 <br>
-<b>Gesamt barrierefreie Parkplätze:</b> Diese Ausführung bezieht sich auf eine Zusammenstellung der Inklusionsbeauftragten der Stadt Ingolstadt. Hierbei sind auch nicht städtische Parkplätze enthalten. Die barrierefreien Parkplätze beim Audi Sportpark wurden hier dazugezählt (25 Parkplätze).<br>
+<b>Gesamt barrierefreie Parkplätze:</b> Diese Ausführung bezieht sich auf eine Zusammenstellung der Inklusionsbeauftragten der Stadt Ingolstadt. Hierbei sind auch nicht städtische Parkplätze enthalten. Die barrierefreien Parkplätze beim Audi Sportpark wurden hier nicht dazugezählt (25 Stellplätze).<br>
 <br>
 <b>Blindenleitsysteme:</b> Die Daten sind  nicht auf einen Standort bezogen, sondern stellen immer die einzelnen Elemente bei Übergängen dar. Die Daten stammen aus der Straßenbefahrung 2022.<br> 
+<br>
+<b>Barrierefreiheit im ÖPNV:</b><br>
+Der barrierefreie Ausbau mit Kassler Bord/Hochbord wird seit 2005 kontinuierlich umgesetzt, d.h. immer, wenn eine Straßenbaumaßnahme erfolgte, wird gleichzeitig der barrierefreie Umbau durchgeführt. Dies waren ca. 12 - 14 Haltestellen / Jahr. Der Aufbau der DFI (dynamische Fahrgastinformation) in Kombination mit der akustischen Haltestellenansage begann in 2019 im Zuge der Fördermaßnahme <a href="https://vgi-newmind.de/">„NewMind“</a>.<br>
+<br>
+Alle Linienbusse, die im Stadtverkehr Ingolstadt zum Einsatz kommen, sind barrierefrei. Dies ist eine zentrale Fördervoraussetzung, um GVFG-Mittel (Gemeindeverkehrsfinanzierungsgesetz) zur Busbeschaffung zu erhalten. Die letzten nicht-barrierefreien Linienbusse für den Stadtverkehr Ingolstadt wurden 1991 von der damaligen Kraftverkehr Bayern GmbH beschafft. Seit 1992 werden ausschließlich Niederflurfahrzeuge beschafft, seit 2001 werden ausschließlich Niederflurbusse mit zusätzlicher Klapprampe beschafft.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N4.3: Barrierefreie Mobilität für alle Menschen<br>
