--- a/meta/11-2.md
+++ b/meta/11-2.md
@@ -32,7 +32,7 @@ computation_definitions: Barrierefreies und inklusives Mobilitätsangebot (Anzah
 
 SOURCE_TYPE: IFG AöR, VGI, Tiefbauamt der Stadt Ingolstadt, Amt für Verkehrstechnik und Geoinformation der Stadt Ingolstadt, Inklusionsbeauftragte der Stadt Ingolstadt  # data source  
 source_earliest_available_1:  2019
-source_periodicity_1: unregelmäßig
+source_periodicity_1: Aufgrund verschiedener Quellen und aufwendiger Erhebung können nicht alle Daten jährlich aktualisiert werden
 
 language: de   
 published: true 
