--- a/meta/11-14.md
+++ b/meta/11-14.md
@@ -33,6 +33,8 @@ reporting_status: complete
 ---
 Entfernung im innerstädtischen Bereich Luftlinie jeweils 300 Meter und in den Vorortern maximal 600 Meter Luftlinie. Entspricht den ÖPNV Richtlinien. <br>
 <br>
+Nicht mit einberechnet sind die Haltestellen des freigestellten Schülerverkehrs sowie betriebsinterne Haltestellen der Audi AG und Pendlerbushaltestellen. Jährliche Schwankungen können im Zuge von Neuerschließungen, Neuplanungen, Kürzungen oder einer Anpassung des Fahrtangebots bei gleichbleibender Zahl an Haltestellen entstehen und sind dadurch zu erklären.<br>
+<br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N4.1: Steigerung umweltfreundlicher und sicherer Mobilität<br>
 <br>
