--- a/meta/16-2.md
+++ b/meta/16-2.md
@@ -47,9 +47,9 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Die Stadt Ingolstadt verfügt über ein breites Beteiligungsangebot für Bürger/-innen, die das politische und gesellschaftliche Geschehen der Stadt aktiv mitgestalten möchten. Informationen über das gesamte Angebot als <a href="https://www.ingolstadt.de/output/download.php?fid=3052.1656.1.PDF">PDF</a>. <br>
+Die Stadt Ingolstadt verfügt über ein breites Beteiligungsangebot für Bürger/-innen, die das politische und gesellschaftliche Geschehen der Stadt aktiv mitgestalten möchten.<br>
 <br>
-Eine komplette Übersicht sowie weitere Einzelheiten zu den Beteiligungsverfahren finden Sie auf der <a href="https://ingolstadt-macht-mit.de/">Ingolstädter Beteiligungsplattform</a> und im <a href="https://www4.ingolstadt.de/sessionnet/info.php">Ratsinfoportal der Stadt</a><br>
+Eine komplette Übersicht sowie weitere Einzelheiten zu den Beteiligungsverfahren finden Sie auf der <a href="https://ingolstadt-macht-mit.de/">Ingolstädter Beteiligungsplattform</a>.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 V1.1.4: Förderung einer barrierefreien, inklusiven und geschlechterunabhängigen Bürgerbeteiligung<br>
