--- a/meta/11-17.md
+++ b/meta/11-17.md
@@ -24,9 +24,9 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: Modal Split im Stadtgebiet nach den Kategorien "zu Fuß", "Fahrrad", "MIV (Motorisierter Individualverkehr)" und "ÖV (Öffentlicher Verkehr)"
 
-SOURCE_TYPE: <a href="https://www.ingolstadt.de/Rathaus/Verkehr/Verkehrsmanagement/Verkehrsentwicklungsplan/">Amt für Verkehrsmanagement und Geoinformation</a>  # data source  
+SOURCE_TYPE: <a href="https://www.ingolstadt.de/Rathaus/Verkehr/Verkehrsmanagement/Verkehrsentwicklungsplan/">Amt für Verkehrsmanagement und Geoinformation</a>, Verkehrsverbund Großraum Ingolstadt  # data source  
 source_earliest_available_1: 2001
-source_periodicity_1: alle 5 - 10 Jahre
+source_periodicity_1: bei Bedarf, ca. alle 5 - 10 Jahre
 
 language: de   
 published: true 
@@ -35,7 +35,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Der Modal Split gibt die prozentualen Anteile der einzelnen Verkehrsmittel an der gesamten ⁠Verkehrsleistung⁠ an und geben Aufschluss über die Verkehrsmittelnutzung. 2001 und 2016 wurden hierzu Haushalsbefragungen von der Stadt Ingolstadt durchgeführt, um annährend das Nutzungsverhalten zu bestimmen. Hierbei teilt sich die Befragung in die Bereiche "zu Fuß", "Fahrrad", "MIV (Motorisierter Individualverkehr)" und "ÖV (Öffentlicher Verkehr)" auf. Hierbei wurden u.a. Angaben über Verkehrsmittelverfügbarkeit und -nutzung, Wohnlagen, soziodemografische Merkmale, Häufigkeit und Zweck der Nutzung, Verkehrsleistung gemacht. 2023 erfolgte eine weitere Befragung. Die Ergebnisse hierzu sind aber noch ausstehend. Ein Ziel des Verkehrsentwicklungsplans 2025 aus dem Jahr 2016 war es u.a. den Anteil des Fahrradverkehrs auf 25 Prozent zu erhöhen.  <br>
+Der Modal Split gibt die prozentualen Anteile der einzelnen Verkehrsmittel an der gesamten ⁠Verkehrsleistung⁠ an. 2001 und 2016 wurden hierzu Haushaltsbefragungen von der Stadt Ingolstadt durchgeführt, um das Nutzungsverhalten der Ingolstädter Bevölkerung zu ermitteln. Die Befragung der unterschiedlichen Verkehrsmittel teilt sich in die Bereiche “zu Fuß”, “Fahrrad”, “MIV (Motorisierter Individualverkehr)” und “ÖV (Öffentlicher Verkehr)” auf. Zudem wurden u.a. Angaben über Verkehrsmittelverfügbarkeit und -nutzung, Wohnlagen, soziodemografische Merkmale, Häufigkeit und Zweck der Nutzung, Verkehrsleistung abgefragt. 2023 erfolgte eine weitere Befragung im Rahmen des bundesweiten Erhebung Mobilität in Deutschland (MiD), die Ergebnisse hierzu sind derzeit noch ausstehend.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 N4.1: Steigerung umweltfreundlicher und sicherer Mobilität<br>
